--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,19 @@ repository = "https://github.com/lamhai1401/web_server_rs"
 [dependencies]
 env_logger = "0.8"
 rustls = "0.18"
+futures = "0.3"
 actix-web = { version = "3", features = ["rustls"] }
+actix-service = "1.0.0"
 actix-cors = "0.5.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+json = "0.12"
+actix-rt = "2.2.0"
+actix-http = "2.2.0"
+awc = "2.0.3"
 
-# rustls = "0.16"
-# actix-web = { version = "2.0.0", features = ["rustls"] }
-# actix-files = "0.2.1"
-# actix-rt = "1.0.0"
+[dev-dependencies]
+actix-rt = "1"
 
 [lib]
 name = "web_server_rs"
