--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,26 @@ repository = "https://github.com/lamhai1401/web_server_rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-env_logger = "0.8"
 rustls = "0.18"
 futures = "0.3"
+actix-cors = "0.5.4"
 actix-web = { version = "3", features = ["rustls"] }
 actix-service = "1.0.0"
-actix-cors = "0.5.4"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-json = "0.12"
-actix-rt = "2.2.0"
-actix-http = "2.2.0"
-awc = "2.0.3"
+dotenv = "0.15.0"
+
+actix-files = "0.3.0"
+serde_json = "1.0.53"
+diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
+serde = { version = "1.0.110", features = ["derive"] }
+r2d2 = "0.8.8"
+validator = "0.10.0"
+validator_derive = "0.10.0"
+derive_more = "0.99.8"
+env_logger = "0.7.1"
+log = "0.4.8"
+openssl = "0.10.30"
+actix-rt = "1.1.1"
+
 
 [dev-dependencies]
 actix-rt = "1"
